<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_classes">Classes</string>
    <string name="button_classes">My Classes</string>
    <string name="welcome">Welcome! Where do you want to go?</string>
    <string name="button_add_classes">Add more classes</string>
    <string name="my_classes">My Classes</string>
    <string name="tip">A useful tip for the app will go here!</string>
    <string name="add_classes_text">Add more classes</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>