<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.classes.ClassesFragment">

    <ImageButton
        android:id="@+id/class_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#673AB7"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/class_5"
        app:layout_constraintTop_toBottomOf="@+id/class_3" />

    <ImageButton
        android:id="@+id/class_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#2196F3"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/class_2"
        tools:layout_editor_absoluteX="170dp" />

    <ImageButton
        android:id="@+id/class_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#009688"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/class_5"
        app:layout_constraintTop_toBottomOf="@+id/class_1" />

    <ImageButton
        android:id="@+id/class_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:backgroundTint="#8BC34A"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/class_2"
        tools:layout_editor_absoluteY="173dp" />

    <TextView
        android:id="@+id/text_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/my_classes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/class_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#F44336"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/class_2"
        tools:layout_editor_absoluteY="173dp" />

    <ImageButton
        android:id="@+id/class_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:src="@drawable/outline_school_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="173dp" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="401dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_tips_and_updates_black_24dp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageButton
        android:id="@+id/add_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:src="@drawable/outline_dashboard_customize_black_24dp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/add_classes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_classes_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="499dp" />
</androidx.constraintlayout.widget.ConstraintLayout>